--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build/index.html . && sed -i.bak -E 's/(href|src)=\"\\//\\1=\"\\/build\\//g' index.html",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
